<resources>
    <string name="app_name">PC Build Logger</string>
    <string name="user_login">Login</string>
    <string name="user_email">Email:</string>
    <string name="user_password">Password</string>
    <string name="new_user">New user?</string>
    <string name="existing_user">Existing user?</string>
    <string name="user_register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_logout">Logout</string>
    <string name="user_id">User Id:</string>
    <string name="add_build">Add new build</string>
    <string name="build_name">Build name</string>
    <string name="add_component">Add new component</string>
    <string name="back"><![CDATA[<- Back]]></string>
    <string name="component_name">Component name</string>
    <string name="open_gallery">Open gallery</string>
    <string name="open_camera">Open camera</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
</resources>