<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_camera"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/open_gallery"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="16dp"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/btn_gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/open_camera"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="16dp"
        android:textColor="@color/white"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_new_component_name_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_camera"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="16dp"
        android:textColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_new_component_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/component_name"
            android:inputType="text"
            android:textColor="@color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_cancel"
        app:layout_constraintTop_toBottomOf="@+id/til_new_component_name_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_confirm"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/cancel"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_confirm"
        app:layout_constraintTop_toBottomOf="@+id/til_new_component_name_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/confirm"/>

</androidx.constraintlayout.widget.ConstraintLayout>