<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:textSize="40sp"
        android:text="@string/user_login"
        android:textAlignment="center"
        android:textColor="@color/white"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_user_email_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:textColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_user_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/user_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_user_password_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/til_user_email_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:textColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_user_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/user_password"
            android:inputType="textPassword"
            android:textColor="@color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_new_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/til_user_password_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_register"
        android:layout_margin="16dp"
        android:textSize="16sp"
        android:text="@string/new_user"
        android:textAlignment="viewEnd"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/til_user_password_input"
        app:layout_constraintStart_toEndOf="@+id/tv_new_user"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:textSize="16sp"
        android:text="@string/user_register"
        android:textStyle="bold"
        android:textColor="@color/purple_500"
        android:textAlignment="viewStart"/>

    <Button
        android:id="@+id/btn_user_action"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:textColor="@color/white"
        android:text="@string/user_login"/>

</androidx.constraintlayout.widget.ConstraintLayout>