<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_user_email"
        android:layout_margin="16dp"
        android:textSize="20sp"
        android:text="@string/user_email"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/tv_user_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_email"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:textSize="20sp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_user_id"
        android:layout_margin="16dp"
        android:textSize="20sp"
        android:text="@string/user_id"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/tv_user_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_email"
        app:layout_constraintStart_toEndOf="@+id/tv_id"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:textSize="20sp"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btn_user_logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:text="@string/user_logout"
        android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>